--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <div class="footer-logo">
-                    <!-- Logo placeholder -->
+                    <img src="images/mylogo.png" alt="Company Logo">
                 </div>
                 <p>Your trusted partner in sports equipment for organizations and teams.</p>
             </div>
