--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <a href="index.html" class="nav-logo">
+                <img src="images/mylogo.png" alt="Company Logo">
+            </a>
+            <button class="mobile-menu-btn">☰</button>
+            <div class="nav-right">
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="catalogue.html">Catalogue</a></li>
+                    <li><a href="#contact" class="nav-contact-btn">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
