--- a/catalogue.html
+++ b/catalogue.html
@@ -7,21 +7,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
             <a href="index.html" class="nav-logo">
-                <img src="images/mylogo.png" alt="Company Logo">
+                <img src="images/PNTY_Brand_Horizontal_branco.png" alt="Company Logo" style="width: 170px;">
             </a>
-            <button class="mobile-menu-btn">☰</button>
-            <div class="nav-right">
+            <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
+            <div class="nav-right" id="navMenu">
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="catalogue.html">Catalogue</a></li>
-                    <li><a href="index.html#contact" class="nav-contact-btn">Contact Us</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="store.html">STORE</a></li>
+                    <li><a href="about.html">ABOUT US</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
             </div>
         </div>
@@ -67,5 +68,6 @@
     <!-- Footer -->
     <!-- Copy the same footer from index.html -->
     <script src="script.js"></script>
+    <script src="navbar.js"></script>
 </body>
 </html> 
