--- a/index.html
+++ b/index.html
@@ -7,31 +7,57 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
             <a href="index.html" class="nav-logo">
-                <img src="images/mylogo.png" alt="Company Logo">
+                <img src="images/PNTY_Brand_Horizontal_branco.png" alt="Company Logo" style="width: 170px;">
             </a>
-            <button class="mobile-menu-btn">☰</button>
-            <div class="nav-right">
+            <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
+            <div class="nav-right" id="navMenu">
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="catalogue.html">Catalogue</a></li>
-                    <li><a href="#contact" class="nav-contact-btn">Contact Us</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="store.html">STORE</a></li>
+                    <li><a href="about.html">ABOUT US</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Hero Section with Carousel -->
     <section class="hero">
-        <div class="hero-content">
-            <h1>Quality Sports Equipment for Groups</h1>
-            <p>Perfect for schools, clubs, and organizations</p>
+        <div class="hero-carousel">
+            <div class="carousel-slides">
+                <div class="carousel-slide active">
+                    <div class="slide-content">
+                        <h1>Quality Sports Equipment</h1>
+                        <p>Perfect for schools, clubs, and organizations</p>
+                    </div>
+                </div>
+                <div class="carousel-slide">
+                    <div class="slide-content">
+                        <h1>Professional Sports Gear</h1>
+                        <p>Trusted by leading athletes and teams</p>
+                        <button class="cta-button">View Collection</button>
+                    </div>
+                </div>
+                <div class="carousel-slide">
+                    <div class="slide-content">
+                        <h1>Bulk Orders Welcome</h1>
+                        <p>Special pricing for large orders</p>
+                        <button class="cta-button">Get Quote</button>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-controls">
+                <button class="carousel-prev">❮</button>
+                <button class="carousel-next">❯</button>
+            </div>
+            <div class="carousel-indicators"></div>
         </div>
     </section>
 
@@ -43,74 +69,40 @@
 
     <!-- Bundles Grid -->
     <section class="bundles">
-        <h2>Our Equipment Bundles</h2>
+        <h2>Our highlighted products</h2>
         <div class="bundles-grid" id="bundlesGrid">
-            <!-- Bundles will be inserted here by JavaScript -->
+            <!-- Highlighted products will be dynamically inserted here -->
         </div>
     </section>
 
-    <!-- Modal -->
-    <div class="modal" id="bundleModal">
+    <!-- Product Modal -->
+    <div class="modal" id="productModal">
         <div class="modal-content">
             <button class="close-modal" id="closeModal">&times;</button>
-            <div id="modalContent"></div>
+            <div id="modalContent">
+                <div class="modal-header"></div>
+                <div class="modal-body"></div>
+                <div class="modal-footer"></div>
+            </div>
         </div>
     </div>
-
-    <!-- Contact Form -->
-    <section class="contact" id="contact">
-        <h2>Contact Us</h2>
-        <form class="contact-form" id="contactForm">
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="phone">Phone</label>
-                <input type="tel" id="phone" name="phone" required>
-            </div>
-            <div class="form-group">
-                <label for="organization">Organization Type</label>
-                <select id="organization" name="organization" required>
-                    <option value="">Select organization type</option>
-                    <option value="school">School</option>
-                    <option value="club">Sports Club</option>
-                    <option value="gym">Gym</option>
-                    <option value="other">Other</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="bundle">Selected Bundle</label>
-                <input type="text" id="bundle" name="bundle" readonly>
-            </div>
-            <div class="form-group">
-                <label for="message">Message</label>
-                <textarea id="message" name="message" required></textarea>
-            </div>
-            <button type="submit">Submit Request</button>
-        </form>
-    </section>
 
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
                 <div class="footer-logo">
-                    <img src="images/mylogo.png" alt="Company Logo">
+                    <img src="images\PNTY_Brand_Horizontal_branco.png" alt="Penalty logo">
                 </div>
-                <p>Your trusted partner in sports equipment for organizations and teams.</p>
+                <p>TEAM UP TO WIN!</p>
             </div>
             
             <div class="footer-section">
                 <h4>Quick Links</h4>
                 <ul class="footer-links">
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#bundles">Our Bundles</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="store.html">Catalogue</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="#terms">Terms & Conditions</a></li>
                 </ul>
             </div>
@@ -118,7 +110,7 @@
             <div class="footer-section">
                 <h4>Contact Info</h4>
                 <ul class="footer-links">
-                    <li>Email: info@example.com</li>
+                    <li>Email: info@wholesale-penalty.com</li>
                     <li>Phone: (555) 123-4567</li>
                     <li>Address: 123 Sports Ave,</li>
                     <li>City, State 12345</li>
@@ -137,10 +129,13 @@
         </div>
         
         <div class="footer-bottom">
-            <p>&copy; 2024 Sports Equipment Company. All rights reserved.</p>
+            <p>&copy; 2024 Penalty Sports Equipment Company. All rights reserved.</p>
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="products.js" type="module"></script>
+    <script src="script.js" type="module"></script>
+    <script src="navbar.js" type="module"></script>
+    <script src="carousel.js" type="module"></script>
 </body>
 </html>
