Fixing UI colors and proportions

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 
     <!-- Explanation Section -->
     <section class="explanation">
-        <h2>Why Choose Our Bundles?</h2>
-        <p>We offer premium sports equipment bundles at wholesale prices, perfect for organizations looking to outfit their teams or facilities. Enjoy bulk discounts and dedicated support for your equipment needs.</p>
+        <h2>We are the leader brand of soccer equipment in Brazil</h2>
+        <p>We believe in the transformative power of sports. That's why we design superior products for beginners through to professional athletes.</p>
     </section>
 
     <!-- Bundles Grid -->
     <section class="bundles">
-        <h2>Our highlighted products</h2>
+        <h2>Highlighted products</h2>
         <div class="bundles-grid" id="bundlesGrid">
             <!-- Highlighted products will be dynamically inserted here -->
         </div>
