--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <!-- About Us Content Section -->
     <section class="about-section">
         <div class="about-container">
-            <h1>PENALTY: TEAM UP TO WIN!</h1>
+            <h1>TEAM UP TO WIN!</h1>
             <div class="about-content">
                 <div class="placeholder-message">
                     <ul>
