fixing carousell images

--- a/index.html
+++ b/index.html
@@ -34,22 +34,20 @@
             <div class="carousel-slides">
                 <div class="carousel-slide active">
                     <div class="slide-content">
-                        <h1>Quality Sports Equipment</h1>
-                        <p>Perfect for schools, clubs, and organizations</p>
+                        <h1>Grip and Control</h1>
+                        <p>Specially engineered rubber outsole that provides superior traction on indoor surfaces. Execute quick turns, sudden stops, and explosive starts with confidence.</p>
                     </div>
                 </div>
                 <div class="carousel-slide">
                     <div class="slide-content">
                         <h1>Professional Sports Gear</h1>
                         <p>Trusted by leading athletes and teams</p>
-                        <button class="cta-button">View Collection</button>
                     </div>
                 </div>
                 <div class="carousel-slide">
                     <div class="slide-content">
                         <h1>Bulk Orders Welcome</h1>
-                        <p>Special pricing for large orders</p>
-                        <button class="cta-button">Get Quote</button>
+                        <p>Special pricing for large orders</p>                        
                     </div>
                 </div>
             </div>
