removing carousel text overlay

--- a/index.html
+++ b/index.html
@@ -32,28 +32,9 @@
     <section class="hero">
         <div class="hero-carousel">
             <div class="carousel-slides">
-                <div class="carousel-slide active">
-                    <div class="slide-content">
-                        <h1>Grip and Control</h1>
-                        <p>Specially engineered rubber outsole that provides superior traction on indoor surfaces. Execute quick turns, sudden stops, and explosive starts with confidence.</p>
-                    </div>
-                </div>
-                <div class="carousel-slide">
-                    <div class="slide-content">
-                        <h1>Professional Sports Gear</h1>
-                        <p>Trusted by leading athletes and teams</p>
-                    </div>
-                </div>
-                <div class="carousel-slide">
-                    <div class="slide-content">
-                        <h1>Bulk Orders Welcome</h1>
-                        <p>Special pricing for large orders</p>                        
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-controls">
-                <button class="carousel-prev">❮</button>
-                <button class="carousel-next">❯</button>
+                <div class="carousel-slide active"></div>
+                <div class="carousel-slide"></div>
+                <div class="carousel-slide"></div>
             </div>
             <div class="carousel-indicators"></div>
         </div>
