adding sustainability section to index.html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
         </div>
     </section>
 
+    <!-- Two Column Section -->
+    <section class="two-column-section">
+        <div class="column image-column">
+            <!-- Background image will be set in CSS -->
+        </div>
+        <div class="column content-column">
+            <h2>Max 1000 Ecoknit Football Shoes</h2>
+            <p>With 50 years of partnership with futsal, Penalty is proud to create an ecological product for the sport, once again using the latest technology.</p>
+            <p>With Ecoknit fabric, recycled from PET bottles, Penalty contributes to environmental sustainability, without leaving performance aside.</p>
+            <p>The new Penalty Ecoknit is a product that is 100% recyclable, with a 100% recycled content, and with a 100% recycled content.</p>
+            <h2>Penalty S11 Ecoknit Ball</h2>
+            <p>Since 2019, the Penalty S11 Ecoknit Ball has been used in Campeonato Paulista, reusing 4.5 PET bottles per unit. Made with 62% sustainable or recyclable materials, including sugarcane derivatives, this FIFA-certified ball has helped recycle over 500,000 bottles—a number projected to exceed 250,000 by the end of 2024.</p>
+        </div>
+    </section>
+
     <!-- Product Modal -->
     <div class="modal" id="productModal">
         <div class="modal-content">
