fixing about us page

--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
                 <li><a href="#company-intro">Our Story</a></li>
                 <li><a href="#company-video">Institutional Video</a></li>
                 <li><a href="#technologies">Our Technologies</a></li>
+                <li><a href="#catalogs">Product Catalogs</a></li>
             </ul>
         </aside>
 
@@ -95,7 +96,7 @@
                         </section>
 
                         <!-- Technologies Section -->
-                        <h2 class="about-section-header">Our Technologies</h2>
+                        <h2 class="about-section-header" id="technologies">Our Technologies</h2>
                         <div class="tech-grid">
                             <!-- Ball Technology Card -->
                             <div class="tech-card" data-tech="balls">
@@ -135,6 +136,68 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Catalogs Section -->
+                <section id="catalogs" class="catalogs-section">
+                    <h2 class="about-section-header">Product Catalogs</h2>
+                    <div class="catalogs-grid">
+                        <!-- Equipment Catalog -->
+                        <div class="catalog-card">
+                            <div class="catalog-icon">
+                                <img src="images/pdf-icon.png" alt="PDF Icon">
+                            </div>
+                            <div class="catalog-content">
+                                <h3>Equipment Catalog</h3>
+                                <p>Complete guide to our sports equipment collection</p>
+                                <a href="pdf catalogs/equipment.pdf" class="catalog-download-btn" target="_blank">
+                                    View Catalog
+                                </a>
+                            </div>
+                        </div>
+
+                        <!-- Ball Catalog -->
+                        <div class="catalog-card">
+                            <div class="catalog-icon">
+                                <img src="images/pdf-icon.png" alt="PDF Icon">
+                            </div>
+                            <div class="catalog-content">
+                                <h3>Ball Catalog</h3>
+                                <p>Explore our professional sports balls collection</p>
+                                <a href="pdf catalogs/ball.pdf" class="catalog-download-btn" target="_blank">
+                                    View Catalog
+                                </a>
+                            </div>
+                        </div>
+
+                        <!-- Apparel Catalog -->
+                        <div class="catalog-card">
+                            <div class="catalog-icon">
+                                <img src="images/pdf-icon.png" alt="PDF Icon">
+                            </div>
+                            <div class="catalog-content">
+                                <h3>Apparel Catalog</h3>
+                                <p>Browse our sports apparel and uniforms</p>
+                                <a href="pdf catalogs/apparel.pdf" class="catalog-download-btn" target="_blank">
+                                    View Catalog
+                                </a>
+                            </div>
+                        </div>
+
+                        <!-- Shoes Catalog -->
+                        <div class="catalog-card">
+                            <div class="catalog-icon">
+                                <img src="images/pdf-icon.png" alt="PDF Icon">
+                            </div>
+                            <div class="catalog-content">
+                                <h3>Shoes Catalog</h3>
+                                <p>Discover our sports footwear collection</p>
+                                <a href="pdf catalogs/shoes.pdf" class="catalog-download-btn" target="_blank">
+                                    View Catalog
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
                 <!-- Bottom Hero Section -->
                 <section class="hero-section">
