adding styles to about us technologies

--- a/about.html
+++ b/about.html
@@ -170,6 +170,45 @@
                                     </div>
                                 </div>
                             </div>
+
+                             <!-- Neotec -->
+                             <div class="col-md-4">
+                                <div class="tech-card card h-100 border-0 shadow-sm">
+                                    <div class="card-body text-center p-4">
+                                        <div class="tech-icon-wrapper mb-4">
+                                            <img src="images/about/technologythumbs/neotec.jpg" alt="Ball Technology" class="tech-icon">
+                                        </div>
+                                        <h3 class="h4 mb-3">Neotec</h3>
+                                        <p class="text-muted">Compound of ecological material for high-performance cushioning, exclusive to the Penalty professional line. Reduces the force of the ball without losing speed, turning it soft, fast and precise.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Eckonit -->
+                            <div class="col-md-4">
+                                <div class="tech-card card h-100 border-0 shadow-sm">
+                                    <div class="card-body text-center p-4">
+                                        <div class="tech-icon-wrapper mb-4">
+                                            <img src="images/about/technologythumbs/eckonit.jpg" alt="Shoe Technology" class="tech-icon">
+                                        </div>
+                                        <h3 class="h4 mb-3">Eckonit</h3>
+                                        <p class="text-muted">Polyester fabric made from recycled pet bottles, 4.5 bottles are removed from the environment per ball produced. This technology provides high performance for matches and contributes to the environment.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Duotec -->
+                            <div class="col-md-4">
+                                <div class="tech-card card h-100 border-0 shadow-sm">
+                                    <div class="card-body text-center p-4">
+                                        <div class="tech-icon-wrapper mb-4">
+                                            <img src="images/about/technologythumbs/duotec.jpg" alt="Materials Technology" class="tech-icon">
+                                        </div>
+                                        <h3 class="h4 mb-3">Duotec</h3>
+                                        <p class="text-muted">Sewn and glued panels. Less water absorption with greater sphericity.</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </section>
