--- a/contact.html
+++ b/contact.html
@@ -3,25 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Your Company</title>
+    <title>Contact Us - Penalty Wholesale</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="base-styles.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="styles/base-styles.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/contact.css">
+    <!-- Add logging for style loading -->
+    <script>
+        console.log('Contact page styles loaded successfully');
+    </script>
 </head>
 <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
+            <!-- Logo -->
             <a class="navbar-brand" href="index.html">
                 <img src="images/PNTY_Brand_Horizontal_branco.png" alt="Company Logo" height="40">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            
+            <!-- Mobile Toggle Button -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+            
+            <!-- Navigation Links -->
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">HOME</a>
                     </li>
@@ -32,7 +44,7 @@
                         <a class="nav-link" href="about.html">ABOUT US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="contact.html">CONTACT US</a>
+                        <a class="nav-link active" aria-current="page" href="contact.html">CONTACT US</a>
                     </li>
                 </ul>
             </div>
@@ -40,46 +52,63 @@
     </nav>
 
     <!-- Contact Form Section -->
-    <section class="py-5 mt-5">
+    <section class="contact-section">
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <h2 class="text-center display-4 mb-5">Contact Us</h2>
-                    <div class="card shadow-sm">
-                        <div class="card-body p-4">
-                            <form id="contactForm">
-                                <div class="mb-3">
-                                    <label for="name" class="form-label">Name</label>
-                                    <input type="text" class="form-control" id="name" name="name" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="email" class="form-label">Email</label>
-                                    <input type="email" class="form-control" id="email" name="email" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="phone" class="form-label">Phone</label>
-                                    <input type="tel" class="form-control" id="phone" name="phone" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="organization" class="form-label">Organization Type</label>
-                                    <select class="form-select" id="organization" name="organization" required>
-                                        <option value="">Select organization type</option>
-                                        <option value="school">School</option>
-                                        <option value="club">Sports Club</option>
-                                        <option value="gym">Gym</option>
-                                        <option value="other">Other</option>
-                                    </select>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="bundle" class="form-label">Selected Bundle</label>
-                                    <input type="text" class="form-control" id="bundle" name="bundle" readonly>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="message" class="form-label">Message</label>
-                                    <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-primary w-100">Submit Request</button>
-                            </form>
+            <h2 class="text-center display-4 page-title">Contact Us</h2>
+            <p class="text-center contact-subtitle">
+                Get in touch with our team for wholesale inquiries, partnership opportunities, or any questions about our products.
+            </p>
+            <div class="row g-4 align-items-stretch">
+                <!-- Contact Form -->
+                <div class="col-lg-7">
+                    <div class="form-container h-100">
+                        <form id="contactForm">
+                            <div class="mb-4">
+                                <label for="name" class="form-label">Name</label>
+                                <input type="text" class="form-control" id="name" name="name" required 
+                                    placeholder="Enter your full name">
+                            </div>
+                            <div class="mb-4">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="email" name="email" required
+                                    placeholder="Enter your email address">
+                            </div>
+                            <div class="mb-4">
+                                <label for="phone" class="form-label">Phone</label>
+                                <input type="tel" class="form-control" id="phone" name="phone" required
+                                    placeholder="Enter your phone number">
+                            </div>
+                            <div class="mb-4">
+                                <label for="organization" class="form-label">Organization Type</label>
+                                <select class="form-select" id="organization" name="organization" required>
+                                    <option value="">Select organization type</option>
+                                    <option value="school">School</option>
+                                    <option value="club">Sports Club</option>
+                                    <option value="gym">Gym</option>
+                                    <option value="other">Other</option>
+                                </select>
+                            </div>
+                            <div class="mb-4">
+                                <label for="bundle" class="form-label">Selected Bundle</label>
+                                <input type="text" class="form-control" id="bundle" name="bundle" readonly>
+                            </div>
+                            <div class="mb-4">
+                                <label for="message" class="form-label">Message</label>
+                                <textarea class="form-control" id="message" name="message" rows="5" required
+                                    placeholder="Tell us about your requirements or questions"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary w-100">Submit Request</button>
+                        </form>
+                    </div>
+                </div>
+                <!-- Contact Image -->
+                <div class="col-lg-5">
+                    <div class="contact-image-container">
+                        <div class="contact-image-overlay">
+                            <div class="contact-image-text">
+                                <h3 class="h2 mb-4">Your Trusted Sports Equipment Partner</h3>
+                                <p class="lead mb-0">We're here to help you equip your organization with high-quality Penalty sports gear.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -134,7 +163,22 @@
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
-    <script src="navbar.js"></script>
+    <!-- Add logging for script loading -->
+    <script>
+        // Navbar scroll behavior
+        const navbar = document.querySelector('.navbar');
+        window.addEventListener('scroll', () => {
+            if (window.scrollY > 50) {
+                navbar.classList.add('scrolled');
+            } else {
+                navbar.classList.remove('scrolled');
+            }
+        });
+
+        console.log('Contact page scripts loaded successfully');
+        window.addEventListener('DOMContentLoaded', () => {
+            console.log('Contact page DOM fully loaded and parsed');
+        });
+    </script>
 </body>
 </html> 
